Document how to use run_executor.py to invoke executors as standalone classes.
PiperOrigin-RevId: 248567640

--- a/tfx/examples/workshop/notebooks/step4.ipynb
+++ b/tfx/examples/workshop/notebooks/step4.ipynb
@@ -20,11 +20,10 @@
     "import os\n",
     "import tempfile\n",
     "import pandas as pd\n",
+    "import tfx_utils\n",
     "\n",
-    "import tensorflow as tf\n",
     "import tensorflow_transform as tft\n",
     "from tensorflow_transform import beam as tft_beam\n",
-    "import tfx_utils\n",
     "from tfx.utils import io_utils\n",
     "from tensorflow_metadata.proto.v0 import schema_pb2\n",
     "\n",
@@ -98,6 +97,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Need to re-import because currently taxi_utils.py imports as `tft` not `transform`\n",
+    "import tensorflow_transform as transform\n",
+    "import tensorflow as tf\n",
+    "\n",
     "# Categorical features are assumed to each have a maximum value in the dataset.\n",
     "_MAX_CATEGORICAL_FEATURE_VALUES = [24, 31, 12]\n",
     "\n",
@@ -169,18 +172,18 @@
     "  outputs = {}\n",
     "  for key in _DENSE_FLOAT_FEATURE_KEYS:\n",
     "    # Preserve this feature as a dense float, setting nan's to the mean.\n",
-    "    outputs[_transformed_name(key)] = tft.scale_to_z_score(\n",
+    "    outputs[_transformed_name(key)] = transform.scale_to_z_score(\n",
     "        _fill_in_missing(inputs[key]))\n",
     "\n",
     "  for key in _VOCAB_FEATURE_KEYS:\n",
     "    # Build a vocabulary for this feature.\n",
-    "    outputs[_transformed_name(key)] = tft.compute_and_apply_vocabulary(\n",
+    "    outputs[_transformed_name(key)] = transform.compute_and_apply_vocabulary(\n",
     "        _fill_in_missing(inputs[key]),\n",
     "        top_k=_VOCAB_SIZE,\n",
     "        num_oov_buckets=_OOV_SIZE)\n",
     "\n",
     "  for key in _BUCKET_FEATURE_KEYS:\n",
-    "    outputs[_transformed_name(key)] = tft.bucketize(\n",
+    "    outputs[_transformed_name(key)] = transform.bucketize(\n",
     "        _fill_in_missing(inputs[key]), _FEATURE_BUCKET_COUNT)\n",
     "\n",
     "  for key in _CATEGORICAL_FEATURE_KEYS:\n",
